--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
   <meta property='og:type' content='website'>
-  <meta property='og:title' content='WebデザイナーTARO YAMADA ポートフォリオ'>
+  <meta property='og:title' content='Software Consultant&EngineerMASAHIRO OKAZAKI ポートフォリオ'>
   <meta property='og:url' content='URLが入る'>
-  <meta property='og:description' content='Webデザイナー TARO YAMADAのポートフォリオサイトです！'>
+  <meta property='og:description' content='Software Consultant&Engineer MASAHIRO OKAZAKIのポートフォリオサイトです！'>
   <meta property="og:image" content="img/ogp.png">
-  <meta name="description" content="Webデザイナー TARO YAMADAのポートフォリオサイトです！" />
-  <title>Webデザイナー TARO YAMADA ポートフォリオ</title>
+  <meta name="description" content="Software Consultant&Engineer MASAHIRO OKAZAKIのポートフォリオサイトです！" />
+  <title>Software Consultant&Engineer MASAHIRO OKAZAKI ポートフォリオ</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet">
   <link href="css/reset.css" media="all" rel="stylesheet" type="text/css" />
   <link href="css/photoswipe/photoswipe.css" media="all" rel="stylesheet" type="text/css" />
@@ -33,7 +33,7 @@
     <header id="header">
       <div class="inner">
         <h1 class="logo">
-          <div class="logo-title">TARO YAMADA</div>
+          <div class="logo-title">MASAHIRO OKAZAKI</div>
           <div class="logo-desc">PORTFOLIO</div>
         </h1>
       </div>
@@ -45,7 +45,7 @@
             <h2 class="section-title">WORKS</h2>
             <div class="section-intro">
               <div class="section-text">
-                Web（デザインとコーディング）制作の記録です。<br class="pc">デザイン練習用の架空サイト（ファーストビューのみ）も含んでおります。
+                Under Construction
               </div>
             </div>
           </div>
@@ -55,7 +55,7 @@
                 <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/company.jpg" alt="" />
               </a>
               <div class="card-caption">
-                <div class="card-caption-title">サイト名が入る</div>
+                <div class="card-caption-title">aaaaa</div>
                 <div class="card-caption-info">Design / Coding(Responsive) / WordPress</div>
                 <div class="card-caption-url"><a class="url-link" href="https://yahoo.co.jp" target="_blank">Link</a>
                 </div>
@@ -66,7 +66,7 @@
                 <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/hairsalon.jpg" alt="" />
               </a>
               <div class="card-caption">
-                <div class="card-caption-title">サイト名が入る</div>
+                <div class="card-caption-title">Okapee's portfolio</div>
                 <div class="card-caption-info">Design / Coding(Responsive) </div>
                 <div class="card-caption-url"><a class="url-link" href="https://yahoo.co.jp" target="_blank">Link</a>
                 </div>
@@ -164,7 +164,7 @@
           <div class="section-title-area">
             <h2 class="section-title">SKILL</h2>
             <div class="section-intro">
-              未経験ですが頑張ります！
+              
             </div>
           </div>
           <div class="section-body card-wrapper">
@@ -255,7 +255,7 @@
           <div class="section-title-area">
             <h2 class="section-title">CONTACT</h2>
             <div class="section-intro">
-              お問い合わせは、SNSかメールでお願いいたします。
+              
             </div>
           </div>
           <div class="section-body contact-wrapper">
@@ -279,7 +279,7 @@
         </div>
       </div>
       <div class="inner">
-        <div class="copyright">Copyright&copy;TARO YAMADA. All Rights Reserved.</>
+        <div class="copyright">Copyright&copy;MASAHIRO OKAZAKI. All Rights Reserved.</>
         </div>
     </footer>
   </div>
